docs: hoan thanhh ban giao dien mau cho actor: quantrivien/profile page, quantrivien/login, quantrivien/managethuocbvtv

--- a/frontend/bs-studio-template/actor-quantrivien-profile-page.html
+++ b/frontend/bs-studio-template/actor-quantrivien-profile-page.html
@@ -20,8 +20,8 @@
                 </a>
                 <hr class="sidebar-divider my-0">
                 <ul class="nav navbar-nav text-light" id="accordionSidebar"></ul>
-                <div class="text-center d-none d-md-inline"><button class="btn rounded-circle border-0" id="sidebarToggle" type="button"></button></div>
-                <div class="d-flex flex-column"><a class="text-white mb-2" href="#">Danh sách thuốc BVTV</a><a class="text-white mb-2" href="#">Danh sách phân bón</a><a class="text-white mb-2" href="#">Danh sách HTX</a><a class="text-white mb-2" href="#">Danh sách quản lý&nbsp; HTX</a></div>
+                <div class="text-center d-none d-md-inline"></div>
+                <div class="d-flex flex-column"><a class="text-white mb-2" href="#">Hợp tác xã</a><a class="text-white mb-2" href="#">Quản lý Hợp tác xã</a><a class="text-white mb-2" href="#">Thuốc BVTV</a><a class="text-white mb-2" href="#">Phân bón</a></div>
             </div>
         </nav>
         <div class="d-flex flex-column" id="content-wrapper">
@@ -47,31 +47,31 @@
                                 <div class="nav-item dropdown no-arrow"><a class="dropdown-toggle nav-link" data-toggle="dropdown" aria-expanded="false" href="#"><span class="badge badge-danger badge-counter">3+</span><i class="fas fa-bell fa-fw"></i></a>
                                     <div class="dropdown-menu dropdown-menu-right dropdown-list dropdown-menu-right animated--grow-in"
                                         role="menu">
-                                        <h6 class="dropdown-header">alerts center</h6>
+                                        <h6 class="dropdown-header">trung tâm thông báo</h6>
                                         <a class="d-flex align-items-center dropdown-item" href="#">
                                             <div class="mr-3">
                                                 <div class="bg-primary icon-circle"><i class="fas fa-file-alt text-white"></i></div>
                                             </div>
-                                            <div><span class="small text-gray-500">December 12, 2019</span>
-                                                <p>A new monthly report is ready to download!</p>
+                                            <div><span class="small text-gray-500">12 tháng 12, 2019</span>
+                                                <p>Chức năng xem lịch sử quản lý đã được thêm vào hệ thống, dùng thử ngay.</p>
                                             </div>
                                         </a>
                                         <a class="d-flex align-items-center dropdown-item" href="#">
                                             <div class="mr-3">
-                                                <div class="bg-success icon-circle"><i class="fas fa-donate text-white"></i></div>
+                                                <div class="bg-success icon-circle"><i class="fas fa-clipboard-check text-white"></i></div>
                                             </div>
-                                            <div><span class="small text-gray-500">December 7, 2019</span>
-                                                <p>$290.29 has been deposited into your account!</p>
+                                            <div><span class="small text-gray-500">7 tháng 12, 2019</span>
+                                                <p>Quá trình sao lưu toàn bộ dữ liệu về máy đã thành công.</p>
                                             </div>
                                         </a>
                                         <a class="d-flex align-items-center dropdown-item" href="#">
                                             <div class="mr-3">
                                                 <div class="bg-warning icon-circle"><i class="fas fa-exclamation-triangle text-white"></i></div>
                                             </div>
-                                            <div><span class="small text-gray-500">December 2, 2019</span>
-                                                <p>Spending Alert: We've noticed unusually high spending for your account.</p>
+                                            <div><span class="small text-gray-500">2 tháng 12, 2019</span>
+                                                <p>Có một yêu cầu tạo mới Hợp tác xã cần được xác thực.</p>
                                             </div>
-                                        </a><a class="text-center dropdown-item small text-gray-500" href="#">Show All Alerts</a></div>
+                                        </a><a class="text-center dropdown-item small text-gray-500" href="#">Hiển thị tất cả thông báo</a></div>
                                 </div>
                             </li>
                             <li class="nav-item dropdown no-arrow mx-1" role="presentation">
@@ -168,7 +168,7 @@
                 </div>
                 <div class="card-body">
                     <div class="row">
-                        <div class="col-md-6">
+                        <div class="col-12 col-md-6 col-md-12">
                             <form>
                                 <div class="form-group"><label for="signature"><strong>Nội dung muốn báo cáo</strong><br></label><textarea class="form-control" rows="4" name="feedback" placeholder="Để thuận tiện cho quá trình sửa lỗi, bạn nên gửi báo cáo giống với ví dụ sau: Phản hồi chậm - Khi tôi thay đổi nội dung người dùng hoặc thêm mới thì phải đợi khoảng 1 phút mới có phản hồi."></textarea></div>
                                 <div
