set linter and component split

--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -26,6 +26,8 @@
     -->
     <!-- <title>actor-quantrivien-quan-tri-thuoc-bvtv</title> -->
     <title>Login - HTX 4.0</title>
+    <script src="https://kit.fontawesome.com/5a020be27a.js"></script>
+
     <!-- <link
       rel="stylesheet"
       href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
