--- a/mobile/bsstudio-ui-template/actor-nongdan-main-layout.html
+++ b/mobile/bsstudio-ui-template/actor-nongdan-main-layout.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html style="height: 0;min-height: none;">
+<html>
 
 <head>
     <meta charset="utf-8">
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="assets/css/smoothproducts.css">
 </head>
 
-<body style="height: 100vh;min-height: none;">
+<body>
     <nav class="navbar navbar-light navbar-expand-lg fixed-top bg-white clean-navbar">
         <div class="container"><a class="navbar-brand logo" href="#">HTX 4.0</a><button data-toggle="collapse" class="navbar-toggler" data-target="#navcol-1"><span class="sr-only">Toggle navigation</span><span class="navbar-toggler-icon"></span></button>
             <div class="collapse navbar-collapse"
@@ -35,7 +35,7 @@
             </div>
         </section>
     </main>
-    <footer class="page-footer dark" style="/*position: fixed;*//*bottom: 0;*//*left: 0;*/padding: 0;">
+    <footer class="page-footer dark" style="padding: 0;">
         <div class="footer-copyright" style="border: 0;background-color: #fff;color: #858796;margin: 0;">
             <p style="color: #858796;">Copyright © HTX 4.0 2019</p>
         </div>
