--- a/frontend/bs-studio-template/actor-quantrivien-quan-tri-htx.html
+++ b/frontend/bs-studio-template/actor-quantrivien-quan-tri-htx.html
@@ -238,7 +238,7 @@
             <div class="card shadow">
                 <div class="card-header py-3">
                     <p class="text-primary m-0 font-weight-bold">Danh sách hợp tác xã</p>
-                    <div class="mt-3 d-flex flex-row justify-content-around"><a class="btn btn-success btn-icon-split btn-sm" role="button" data-toggle="modal" data-target="#modal-add"><span class="text-white-50 icon"><i class="fas fa-plus"></i></span><span class="text-white text">Thêm mới dữ liệu</span></a>
+                    <div class="mt-3 d-flex flex-row justify-content-around"><a class="btn btn-success btn-icon-split" role="button" data-toggle="modal" data-target="#modal-add"><span class="text-white-50 icon"><i class="fas fa-plus"></i></span><span class="text-white text">Thêm mới dữ liệu</span></a>
                         <a
                             class="btn btn-danger btn-icon-split" role="button" data-toggle="modal" data-target="#modal-delete-items"><span class="text-white-50 icon"><i class="fas fa-trash"></i></span><span class="text-white text">Xóa dữ liệu</span></a>
                     </div>
