--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -62,6 +62,7 @@
       href="https://cdnjs.cloudflare.com/ajax/libs/baguettebox.js/1.10.0/baguetteBox.min.css"
     />
     <link rel="stylesheet" href="./assets/css/smoothproducts.css" />
+    <link rel="stylesheet" href="assets/css/untitled.css">
   </head>
   <body id="page-top">
     <noscript>You need to enable JavaScript to run this app.</noscript>
